feat add some adm routes
